--- a/assets/styles.css
+++ b/assets/styles.css
@@ -785,7 +785,7 @@ footer {
 }
 #footer__social-item a{
     display: inline-block;
-    padding: 1rem 2.8rem;
+    padding: 10px 10px;
     background-color: black;
     border-radius: 4rem;
     font-size: 1.6rem;
