--- a/assets/styles.css
+++ b/assets/styles.css
@@ -784,11 +784,11 @@ footer {
   color: rgb(243, 243, 236);
 }
 #footer__social-item a{
-    display: inline-block;
+    display: flex;
     background-color: black;
     font-size: 1.6rem;
     color: #b74b4b;
-    letter-spacing: 0.3rem;
+    letter-spacing: 0rem;
     font-weight: 600;
     border: 0px solid #b74b4b;
     transition: 0.3s ease;
