--- a/assets/styles.css
+++ b/assets/styles.css
@@ -572,6 +572,7 @@ header Az {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
+  left: 0; right: 0;
 }
 
 .about_in {
